# IlseNeuro

./: README.md
trace_c4/: .pdm-python  =1.3  Document of useful links IK  OpenEphys_wrapper_IK.py  OpenEphys_wrapper_wrapper.py  cell_type_counts_per_group.py  cell_types_per_group_old_including_per_mouse.py  convertData2Test.py  copyC4ResultsToAnalysisOutput.py  discharge_statistics.py  discharge_statistics_mouse_groups.py  get_dropbox_path.py  get_mouse_groups.py  getting_mouse_groups.py  inspectPredictedCellTypes.py  plot_rasters_phy.py  process_all_mice.sh  process_all_mice_2.sh  pyproject.toml  renameFiles.py  run_run_cell_types_classifier.py  run_run_cell_types_classifier_timed_wrapper.py  run_script.py  run_script_2.py  run_script_3.py  save_SpikeTimes_StimTimes_as_mat.py  spikeTrainHistogramsISI.py  spikeTrainHistogramsISI2.py  spikeTrainHistogramsISI3.py  spikeTrainHistogramsISI4.py  spikeTrainHistogramsISI5.py  spikeTrainHistogramsISI5_test_help_2.py  stitch_CH_continuous_files_switch_sessions.py  utils_IK.py  waveformInspection.py
trace_c4/matlab/: IK_PSTH_Selection.m  confusionMatrix.m  inspectMouseUnits.m  inspectMouseUnitsNumbers.m  inspectTrials.m  run_psths.m
trace_c4/matlab/ephys_code/: Config_h32_oe.prm  Config_h32_oe_IK.prm  DBC_3.1-64-H2_IK.prb  DBC_3.1-64-H2_IK_open_ephys.prb  calcMouseForOverviewTraces.m  convertData.m  getBehaviorEyeDataEphys.m  getBoxplotData.m  getData.m  getSessionStats.m  initSpikeSorting.m  initSpikeSorting2.m  load_open_ephys_data.m  reSaveWithStamp.m  savedOldCodesFile.m  (+1 more)
trace_c4/oebin file/: structureIK.oebin
(+326 files in other folders)
